syntax = "proto3";

package todo;

import "google/protobuf/timestamp.proto";

option go_package = "sample/twirp/rpc/todo";

message Todo {
    int32 task_id = 6;
    string title = 1;
    string desc = 7;
    int32 user_id = 8;
    bool completed = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 9;
    google.protobuf.Timestamp completed_at = 4;
    google.protobuf.Timestamp due_date = 5;
}

message Empty {}

message Request {
    int32 task_id = 6;
    string title = 1;
    string desc = 7;
    bool completed = 2;
    google.protobuf.Timestamp due_date = 5;    
}

message Response {
    int32 code = 1;
    bool success = 2;
    string msg = 3;
    Todo todo = 4;
    repeated Todo todos = 5;
}

service TOdoService {
    rpc createTodo(Todo) returns (Response) {}
    rpc getTodos(Empty) returns (Response) {}
    rpc getTodo(Request) returns (Response) {}
    rpc deleteTodo(Request) returns (Response) {}
    rpc updateTodo(Request) returns (Response) {}
}